[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-lstm"
version = "0.1.0"
description = "LSTM-based prediction of big toe temperature for cold safety assessment"
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "scikit-learn>=1.1",
  "tensorflow>=2.11",
  "matplotlib>=3.5",
  "joblib>=1.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]